version/0.18/_sources/api/solver/_autosummary/settings/cell_registers.rst.txt
:orphan:

.. _cell_registers:

cell_registers
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.cell_registers.cell_registers
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`cell_registers_child <cell_registers_child>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

