version/0.20/_sources/api/solver/_autosummary/settings/cell_registers.rst.txt
:orphan:

.. _cell_registers:

cell_registers
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.cell_registers.cell_registers
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`cell_registers_child <cell_registers_child>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

